# ChangeLog for net-mail/dovecot
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.319 2011/11/05 21:25:09 maekke Exp $

  05 Nov 2011; Markus Meier <maekke@gentoo.org> dovecot-2.0.15.ebuild:
  arm stable, bug #388373

  02 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> dovecot-2.0.15.ebuild:
  x86 stable wrt bug #388373

  28 Oct 2011; Tony Vroon <chainsaw@gentoo.org> dovecot-2.0.15.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in bug #388373.

  25 Oct 2011; Jeroen Roovers <jer@gentoo.org> dovecot-2.0.15.ebuild:
  Stable for HPPA (bug #388373).

*dovecot-2.0.15 (17 Sep 2011)

  17 Sep 2011; Eray Aslan <eras@gentoo.org> +dovecot-2.0.15.ebuild,
  +files/dovecot.init-r3:
  Version bump. Fix deprecated opts variable in init script - bug #382135

*dovecot-2.0.14-r1 (14 Sep 2011)

  14 Sep 2011; Eray Aslan <eras@gentoo.org> +dovecot-2.0.14-r1.ebuild:
  sieve version bump

  10 Sep 2011; Raúl Porcel <armin76@gentoo.org> dovecot-2.0.13.ebuild:
  ia64 stable wrt #378373

  01 Sep 2011; Jeroen Roovers <jer@gentoo.org> dovecot-2.0.13.ebuild:
  Stable for HPPA (bug #376599).

*dovecot-2.0.14 (01 Sep 2011)

  01 Sep 2011; Eray Aslan <eras@gentoo.org> +dovecot-2.0.14.ebuild:
  Version bump. Remove redundant README file - bug #368899

  05 Aug 2011; Eray Aslan <eras@gentoo.org> files/dovecot-1.2.init,
  files/dovecot.init-r2:
  remove deprecated oknodo option - bug #377763

  27 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> dovecot-2.0.13.ebuild:
  ppc64 stable wrt #376599

  28 May 2011; Eray Aslan <eras@gentoo.org> -dovecot-1.2.16.ebuild,
  -dovecot-2.0.11.ebuild, -dovecot-2.0.12.ebuild, -dovecot-2.0.12-r1.ebuild,
  -dovecot-2.0.12-r2.ebuild:
  Remove vulnerable versions

  28 May 2011; Raúl Porcel <armin76@gentoo.org> dovecot-1.2.17.ebuild,
  dovecot-2.0.13.ebuild:
  alpha/arm/sparc stable wrt #368653
