@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX dovecot-1.2.init 1701 RMD160 89cdc58d6ad9ac41f8946fabf3c80e0b9f4b61ea SHA1 9cbf10e9d1997ad3703ee1ae37edbcfad6f16b79 SHA256 44b308537454362b00f8ab87257c4a0d8eb5a183452ca2e3487f74b642fac8e0
 AUX dovecot-2.0.12-sdbox.patch 545 RMD160 92b9d80e3cd1c2f915d4c4fcc751a8267c9cf619 SHA1 6046b2a8076b478deab2003142b31020f875fb5e SHA256 f4f70d4ff9453e5ec3246b3bef27adf101de84ce2d1dcff50577ff79b22d9441
@@ -14,17 +14,29 @@ DIST dovecot-2.0-pigeonhole-0.2.4.tar.gz 1230408 RMD160 61cf4209210f56d033586d77
 DIST dovecot-2.0.13.tar.gz 3272542 RMD160 2c0edd03aba7935e6db18af1384a26bf0b5b432e SHA1 31d556bd1659fb10e5edb45bab8951911151bbfb SHA256 2b512263ec05bbd74cde5c697ad12250d9268eba1c8ce4a8144adea69308675d
 DIST dovecot-2.0.14.tar.gz 3300530 RMD160 f138eb0a290089a308aed8aa40f1a69a64f87926 SHA1 47b4010b277f39cfc9afddf8c0a30e40a17da088 SHA256 42eec803c84bc21a7658a0637428ef6d2f4e2ea8e8cce1177783cc4812c3c7fc
 DIST dovecot-2.0.15.tar.gz 3303717 RMD160 2c315bbce2d7173b1e62c96d3a4bda0910a59d0d SHA1 b90f5c1610d8866413fc39cede218534ad6490e8 SHA256 63640303b5deb299a605a94ffd706cac6866d934175b291d2e66f64e95b97e0d
+DIST dovecot-2.0.16.tar.gz 3317662 RMD160 dfe0cf2bbd211a07bb492c2f0d944a6a9f1c5f79 SHA1 0df6e84233339ee308deaecd8f1a7ffddcaeca16 SHA256 a9652ce1f0767b9a4d4f613dd4d41bbe7b55c25728be6f1283dacf0aff62f057
 EBUILD dovecot-1.2.17.ebuild 8744 RMD160 1c40bc02a47f1bd32bab43c5a37129a53394bbe8 SHA1 5ecf16dbef283f4c0279aba519d129d45e7b2298 SHA256 8f086c275f79bda4f54e2c9b9758c8e636bee12e106748475acac0967238082e
 EBUILD dovecot-2.0.13.ebuild 8928 RMD160 4519a9482f527025f0608c196f4459ce39b5fa2a SHA1 e703435608e33381cb3c27c036113f3f07cbc086 SHA256 047b4a5964a50753d4d0604e517af71a6442d7ee79f1e6e49baf3da40d2d2622
 EBUILD dovecot-2.0.14-r1.ebuild 8857 RMD160 cd4ac752464f887f6a67d8f200a52ee77cd50710 SHA1 fad9c74dc2bb48f34514c34ddc4543429dea71b1 SHA256 850b199377ca85f4e32cac0dbb6e6502fb6ad689509baa2ca72539dbb8047038
 EBUILD dovecot-2.0.14.ebuild 8854 RMD160 926c22e953d956dc3983fbbb8d7eef43e9700d14 SHA1 184e37be42cdea625a5ccb57be96795ffb3a9281 SHA256 86820859336b7d38e88fea978ba892dc2a57990cb40c10016519e65bada0ccd3
 EBUILD dovecot-2.0.15.ebuild 8852 RMD160 d22cf98e15958acb6d414b6a6a56268e9f36f050 SHA1 ca3e304979825f8da066ffdf97d39e9a0be87d9f SHA256 5451118790e070c118639421aa834d8829e554578af514f1c1eb08a4395e6158
-MISC ChangeLog 50016 RMD160 e978f4f5e6d4f3b0403a90e55049e8ea034df9e9 SHA1 a9c516216e96148adfb0c703f9397509f33a4d2d SHA256 29a137461104dd0005a3d1d7ff20cb0aed6a4be8a090bd8988940a2a6a4b0238
+EBUILD dovecot-2.0.16.ebuild 8747 RMD160 6239d3f3f03587d5bee13d9d14f84d90d44a577f SHA1 30854cfc65760b0c5a37de24257fe1ab7211ede8 SHA256 2c19d43dd15bd554b609a6fb3d5f805d308abd0a8fa675ed994d610d3b623676
+MISC ChangeLog 50156 RMD160 22721a3c7276fce918fc7f9f6fabebf806119204 SHA1 aec26553e2f424f4a3633f1fe2a8d9403aac2b7a SHA256 d1bf9926270d5b0d7cc3ab2bed8749a956d231bfe93ea297cad0ec514342f205
 MISC metadata.xml 703 RMD160 a7a55f21501b09979922b24a931fbf7a5bbf86b1 SHA1 b4c9f2cd2a2fae951e319960ce3aba33d56301cf SHA256 3a897cb8fc88c875563623d2757f7b0ebd08743ba4d4fcbdfe37072d99694c58
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk61qj8ACgkQkKaRLQcq0GIPJgCgkKB2r+UBtw2Y/i6J7IvsuZUF
-v8YAnj9q+iwUgafHv7IGilHZg5DLnZ1s
-=Ilzh
+iQIcBAEBCAAGBQJOxK1/AAoJEHfx8XVYajsflcYP/0DsV/9lvkemcxIb6hgPr46x
+rsyXG3PLe+egaGn3bPXwFndn+TSdvYQuvT9JEXhEviRrsYG3PUJNTkGDY7PpNLM+
+KYHkUq78Pw7vShyXVJttU8xExgI4rpAffl5DmAfZ7ZZfWc2i/AIpXSg1aT26f6y/
+iSgfpMDcVwvqTRelsGp43eRwvma28ezu6ugVbBDn1dX4tMC9f68+JZyJcVE4Aafr
+2EiELWpwfK8uuau6Ouc9jx+aOtXPn7vrnFmDrxZkKoEkVVJGxV/wzm15QPW+Socf
+K8UxfF5uEQcyn/LcESKgCqaI9xrsOI9FAPsWS9f1HNXbh4J6QRrW/YpG64MafPAK
+XACBFhWFB7INn2v4nO2FcbZ48VQ3H/sgZiknC3xGm+bSlr+XGEEEEBzvM8+Lo7Hv
+bqUUSJ7hkx8F4v4JI/FLlHlyXwG5Z2ajVaLstyUZkNjNgvROhcp1DeUg1ALDqXiO
+Ma7btXz4b/m8VCf8DbJizU2q5SJt3BS5mLu/AXqDVHxq4g8uff1ppzMn4ghLe3rx
+wI0lOBjr2E/X9POoMaxCuIahiqq9SILKLVK46IU0vXsfDyT8/biNRmRDdVZdQUoi
+L+vrEZLn3faUp7dryHuX6fq8aiIu4GPsPoVkfK2GPIR6pSXsjqaxALAZym5ozlyN
+m/uT9TENgmhBpdxckAn/
+=37Sl
 -----END PGP SIGNATURE-----
